--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "ip": "1.1.5",
     "lodash": "4.17.11",
     "minimist": "1.2.0",
+    "nodejs-sonar-scanner": "^4.0.4",
     "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
@@ -90,6 +91,7 @@
     "redux-saga": "1.0.2",
     "reselect": "4.0.0",
     "sanitize.css": "8.0.0",
+    "sonar-scanner": "^3.1.0",
     "styled-components": "4.2.0"
   },
   "devDependencies": {
@@ -149,6 +151,7 @@
     "react-testing-library": "6.1.2",
     "rimraf": "2.6.3",
     "shelljs": "^0.8.3",
+    "sonarqube-scanner": "^2.7.0",
     "style-loader": "0.23.1",
     "stylelint": "10.0.1",
     "stylelint-config-recommended": "2.2.0",
